modal image gallery

--- a/gallery.html
+++ b/gallery.html
@@ -96,36 +96,48 @@
         <br />
         <p>
           This past weekend showed great turn out at our community gardening
-          event located in south Orlando near the Florida Mall. This farm/garden
-          is owned by a private residence and asked for Growlando volunteers to
-          help harvest the growing crops as well as plant new ones. All ages
-          were welcome to join and got to take home a small basket of the
-          vegetables they harvested. The rest of the harvest will be sold at
-          this week's Lake Eola's farmer's market. Be sure to attend the
-          farmer's market to get fresh produce! Thank you again to all of our
-          Growlando volunteers who came out to help!
+          event located in south Orlando. This farm/garden is owned by a private
+          residence and asked for Growlando volunteers to help harvest the
+          growing crops as well as plant new ones. All ages were welcome to join
+          and got to take home a small basket of the vegetables they harvested.
+          The rest of the harvest will be sold at this week's Lake Eola's
+          farmer's market. Be sure to attend the farmer's market to get fresh
+          produce! Thank you again to all of our Growlando volunteers who came
+          out to help!
           <br /><br />
-          To be the first to see our event pictures follow us on Instagram!
+          To see more event pictures follow us on Instagram!
           <a href="#"><i class="fa fa-instagram"></i></a>
           <br />
-          If you'd like your post to be feautured use the hashtag
+          If you'd like your post to be featured use the hashtag
           #growlandoevents
         </p>
 
         <div class="slideshow-container">
           <div class="mySlides fade">
             <div class="number-text">1 / 3</div>
-            <img src="./img/gallery-img1.jpg" style="width: 100%" />
+            <img
+              src="./img/gallery-img1.jpg"
+              style="width: 100%"
+              alt="mother and daughter digging soil"
+            />
           </div>
 
           <div class="mySlides fade">
             <div class="number-text">2 / 3</div>
-            <img src="./img/gallery-img2.jpg" style="width: 100%" />
+            <img
+              src="./img/gallery-img2.jpg"
+              style="width: 100%"
+              alt="mother and daughter holding harvested pumpkin"
+            />
           </div>
 
           <div class="mySlides fade">
             <div class="number-text">3 / 3</div>
-            <img src="./img/gallery-img3.jpg" style="width: 100%" />
+            <img
+              src="./img/gallery-img3.jpg"
+              style="width: 100%"
+              alt="young child digging in soil"
+            />
           </div>
 
           <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -144,108 +156,143 @@
         </script>
       </div>
       <!--CREATE MODAL FOR IMAGES-->
-      <h2 style="text-align: center">Gallery</h2>
+      <h1>Gallery</h1>
+      <br />
       <div class="img-grid gallery">
-        <a target="_blank" href="img/img7.jpg">
-          <img
-            src="img/img7.jpg"
-            width="100%"
-            alt="pathway between rows of fruit"
-          />
-        </a>
-        <a target="_blank" href="img/img8.jpg">
-          <img
-            src="img/img8.jpg"
-            width="100%"
-            alt="close-up of person planting"
-          />
-        </a>
-        <a target="_blank" href="img/img9.jpg">
-          <img src="img/img9.jpg" width="100%" alt="person planting seeds" />
-        </a>
-        <a target="_blank" href="img/img12.jpg">
-          <img src="img/img12.jpg" width="100%" alt="girl watering plants" />
-        </a>
-        <a target="_blank" href="img/img11.jpg">
-          <img
-            src="img/img11.jpg"
-            width="100%"
-            alt="two people picking fruit in field"
-          />
-        </a>
-        <a target="_blank" href="img/img13.jpg">
-          <img src="img/img13.jpg" width="100%" alt="watering plants" />
-        </a>
-        <a target="_blank" href="img/img14.jpg">
-          <img
-            src="img/img14.jpg"
-            width="100%"
-            alt="close-up of small potted plants"
-          />
-        </a>
-        <a target="_blank" href="img/img15.jpg">
-          <img
-            src="img/img15.jpg"
-            width="100%"
-            alt="man in uniform gardening"
-          />
-        </a>
-        <a target="_blank" href="img/img16.jpg">
-          <img
-            src="img/img16.jpg"
-            width="100%"
-            alt="aerial view of gardening tools"
-          />
-        </a>
-        <a target="_blank" href="img/img17.jpg">
-          <img
-            src="img/img17.jpg"
-            width="100%"
-            alt="greenhouse with rows of plants"
-          />
-        </a>
-        <a target="_blank" href="img/img18.jpg">
-          <img
-            src="img/img18.jpg"
-            width="100%"
-            alt="aerial view of an example of urban farming"
-          />
-        </a>
-        <a target="_blank" href="img/img19.jpg">
-          <img
-            src="img/img19.jpg"
-            width="100%"
-            alt="many people placing plants in soil"
-          />
-        </a>
-        <a target="_blank" href="img/img20.jpg">
-          <img src="img/img20.jpg" width="100%" alt="potting plants" />
-        </a>
-        <a target="_blank" href="img/img21.jpg">
-          <img
-            src="img/img21.jpg"
-            width="100%"
-            alt="sunset over purple flowers"
-          />
-        </a>
-        <a target="_blank" href="img/img22.jpg">
-          <img
-            src="img/img22.jpg"
-            width="100%"
-            alt="sign that reads 'we are in the garden'"
-          />
-        </a>
-        <a target="_blank" href="img/img23.jpg">
-          <img
-            src="img/img23.jpg"
-            width="100%"
-            alt="hands holding three zucchini"
-          />
-        </a>
+        <img
+          class="myImg"
+          src="img/img7.jpg"
+          width="100%"
+          alt="pathway between rows of fruit"
+        />
+        <img
+          class="myImg"
+          src="img/img8.jpg"
+          width="100%"
+          alt="close-up of person planting"
+        />
+        <img
+          class="myImg"
+          src="img/img9.jpg"
+          width="100%"
+          alt="person planting seeds"
+        />
+        <img
+          class="myImg"
+          src="img/img12.jpg"
+          width="100%"
+          alt="girl watering plants"
+        />
+        <img
+          class="myImg"
+          src="img/img11.jpg"
+          width="100%"
+          alt="two people picking fruit in field"
+        />
+        <img
+          class="myImg"
+          src="img/img13.jpg"
+          width="100%"
+          alt="watering plants"
+        />
+        <img
+          class="myImg"
+          src="img/img14.jpg"
+          width="100%"
+          alt="close-up of small potted plants"
+        />
+        <img
+          class="myImg"
+          src="img/img15.jpg"
+          width="100%"
+          alt="man in uniform gardening"
+        />
+        <img
+          class="myImg"
+          src="img/img16.jpg"
+          width="100%"
+          alt="aerial view of gardening tools"
+        />
+        <img
+          class="myImg"
+          src="img/img17.jpg"
+          width="100%"
+          alt="greenhouse with rows of plants"
+        />
+        <img
+          class="myImg"
+          src="img/img18.jpg"
+          width="100%"
+          alt="aerial view of an example of urban farming"
+        />
+        <img
+          class="myImg"
+          src="img/img19.jpg"
+          width="100%"
+          alt="many people placing plants in soil"
+        />
+        <img
+          class="myImg"
+          src="img/img20.jpg"
+          width="100%"
+          alt="potting plants"
+        />
+        <img
+          class="myImg"
+          src="img/img21.jpg"
+          width="100%"
+          alt="sunset over purple flowers"
+        />
+        <img
+          class="myImg"
+          src="img/img22.jpg"
+          width="100%"
+          alt="sign that reads 'we are in the garden'"
+        />
+        <img
+          class="myImg"
+          src="img/img23.jpg"
+          width="100%"
+          alt="hands holding three zucchini"
+        />
+      </div>
+
+      <!-- The Modal -->
+      <div id="myModal" class="modal">
+        <span class="close">&times;</span>
+        <img class="modal-content" id="img01" />
+        <div id="caption"></div>
       </div>
     </div>
     <script>
       showSlides(slideIndex);
+    </script>
+    <script>
+      // Get the modal
+      var modal = document.getElementById("myModal");
+
+      // Get the image and insert it inside the modal - use its "alt" text as a caption
+      var img = document.getElementsByClassName("myImg");
+      var modalImg = document.getElementById("img01");
+      var captionText = document.getElementById("caption");
+
+      var showModal = function () {
+        modal.style.display = "block";
+        modalImg.src = this.src;
+        captionText.innerHTML = this.alt;
+      };
+
+      for (var i = 0; i < img.length; i++) {
+        img[i].addEventListener("click", showModal);
+      }
+
+      // Get the <span> element that closes the modal
+      var span = document.getElementsByClassName("close")[0];
+
+      // When the user clicks on <span> (x), close the modal
+      span.onclick = function () {
+        modal.style.display = "none";
+      };
     </script>
 
     <footer>
