--- a/resources.html
+++ b/resources.html
@@ -92,7 +92,7 @@
         </article>
 
         <article class="card">
-          <img src="img/article-pic3.jpg" alt="squirrel" />
+          <img src="img/article-pic3.jpg" alt="squirrel holding nut" />
           <div class="content">
             <h2>Preventing animals and pests in your garden</h2>
             <br />
@@ -107,7 +107,10 @@
         </article>
 
         <article class="card">
-          <img src="img/article-pic4.jpg" alt="child touching plants" />
+          <img
+            src="img/article-pic4.jpg"
+            alt="child with toy touching garden vines"
+          />
           <div class="content">
             <h2>Getting the family involved in gardening</h2>
             <br />
@@ -131,6 +134,8 @@
           <a
             class="resource"
             href="https://www.gardeningknowhow.com/planting-zones/florida-planting-zones.htm"
+            target="_blank"
+            rel="noopener noreferrer"
             >Click Here</a
           >
           <p>
@@ -146,6 +151,8 @@
           <a
             class="resource"
             href="https://www.orlando.gov/Building-Development/Planning-Approvals/Apply-for-a-Backyard-Chicken-Permit"
+            target="_blank"
+            rel="noopener noreferrer"
             >Click Here</a
           >
           <p>
@@ -161,6 +168,8 @@
           <a
             class="resource"
             href="https://www.ufseeds.com/florida-vegetable-planting-calendar.html"
+            target="_blank"
+            rel="noopener noreferrer"
             >Click Here</a
           >
           <p>
@@ -172,7 +181,11 @@
         <div class="r-info">
           <h2>Orlando Farmers Market</h2>
           <br />
-          <a class="resource" href="https://www.orlandofarmersmarket.com/"
+          <a
+            class="resource"
+            href="https://www.orlandofarmersmarket.com/"
+            target="_blank"
+            rel="noopener noreferrer"
             >Click Here</a
           >
           <p>
