--- a/about.html
+++ b/about.html
@@ -121,15 +121,13 @@
         </p>
         <p>
           A neighborhood community garden benefits the residents living in the
-          neighborhood by producing fresh food right down their street and
-          forming a bond within the community. It also can help raise the
-          propety value of homes in the neighborhood.
+          neighborhood by producing fresh food right down their street and helps
+          create social bonds with other neighborhood residents.
         </p>
         <br />
         <p class="goal-strong">
           Work with schools of grades K-12 to develop a plan for a community
-          garden on school grounds, and establish curriculum in each grade for
-          students to maintain and care for the garden
+          garden on school grounds
         </p>
         <p>
           Kids and teens learning about growing their own food helps teach them
