getinvolved page change

--- a/getinvolved.html
+++ b/getinvolved.html
@@ -87,163 +87,20 @@
       <p>
         We ask that you help spread the word about Growlando and the impact we
         are trying to make in the Orlando community.<br />
-        In addition to spreading the word, check out our resource page for info
-        on how to start your own garden at home.<br />
-        Growing your own food is rewarding and delicious!
-      </p>
-    </div>
-    <div class="get-involved-info">
-      <h1 class="garden-heading2">Events</h1>
-      <br />
-      <p>
-        Check out our upcoming events!
-        <br />In order to participate, use the
-        <a class="jump-scroll-2" href="#contact">contact form</a> at the bottom
-        of the page to sign up as a volunteer at least 24 hours prior to the
-        event.
+        In addition to spreading the word, check out our resource page to learn
+        more about urban farming.<br />
         <br />
-        Make sure to include the event code from the post, your full name, and
-        any questions you might have. <br />
+        Follow us on our social media sites to stay updated on what Growlando is
+        doing!
+        <br />
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <a href="#"><i class="fa fa-instagram"></i></a>
+        <a href="#"><i class="fa fa-youtube"></i></a>
+        <a href="#"><i class="fa fa-twitter"></i></a>
       </p>
-      <br />
-      <h3>Follow us on Facebook for event postings!</h3>
-      <a href="#"><i class="fa fa-facebook"></i></a><br /><br />
-      <p>
-        Don't have a facebook? We also send out our event postings to our
-        volunteers through email. <br />
-        Use the <a class="jump-scroll-2" href="#contact">contact form</a> below
-        and send us a message requesting to be added to our volunteer email
-        list.<br />
-      </p>
-    </div>
-
-    <div class="garden-section">
-      <h1 class="garden-heading">Orlando, FL Community Garden Locations</h1>
-      <p>
-        If you want to participate in a community garden, please reach out to
-        the specified contact that is listed for the location you want to join.
-      </p>
-
-      <section class="garden-section">
-        <div style="overflow-x: auto">
-          <table id="community-gardens">
-            <tr>
-              <th>Garden</th>
-              <th>Location</th>
-              <th>Plots</th>
-              <th>Contact</th>
-            </tr>
-            <tr>
-              <td>Colonialtown Community Garden</td>
-              <td>1517 Lake Highland Drive</td>
-              <td>13 garden plots</td>
-              <td>colonialtowncommunitygarden@gmail.com</td>
-            </tr>
-            <tr>
-              <td>Festival Park</td>
-              <td>2911 East Robinson Street</td>
-              <td>30 garden plots</td>
-              <td>festivalparkcommunitygarden@gmail.com</td>
-            </tr>
-            <tr>
-              <td>Englewood Park</td>
-              <td>6123 La Costa Drive</td>
-              <td>22 garden plots</td>
-              <td>
-                Robert Lorento at rglbob@bellsouth.net, or Tom Cooper at
-                mochacoop@bellsouth.net
-              </td>
-            </tr>
-            <tr>
-              <td>Lake Davis/Greenwood Cemetery</td>
-              <td>1226 Elmwood Street</td>
-              <td>16 garden plots</td>
-              <td>
-                Kathryn Hornblette, Garden Committee President, at
-                LDGCommunityGarden@gmail.com.
-              </td>
-            </tr>
-            <tr>
-              <td>Lake Druid Park</td>
-              <td>
-                899 Coy Drive (take Coy Drive north from Colonial, the road dead
-                ends into the Park)
-              </td>
-              <td>50 garden plots</td>
-              <td>lakedruidgarden@gmail.com</td>
-            </tr>
-            <tr>
-              <td>Laureate Park I – resident only</td>
-              <td>8495 Laureate Boulevard</td>
-              <td>15 garden plots</td>
-              <td>contact the Laureate Park Home Owner’s Association</td>
-            </tr>
-            <tr>
-              <td>Laureate Park II – resident onlys</td>
-              <td>9661 Tavistock Lakes Boulevard</td>
-              <td>29 garden plots</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>Northwest Community Center</td>
-              <td>3955 W D Judge Drive</td>
-              <td>17 garden plots</td>
-              <td>luciana.deshay@orlando.gov</td>
-            </tr>
-            <tr>
-              <td>Parramore</td>
-              <td>654 West Robinson Street</td>
-              <td>19 garden plots</td>
-              <td>Lynn Nicholson at 407.719.7906</td>
-            </tr>
-            <tr>
-              <td>Washington Shores</td>
-              <td>3600 Rogers Drive</td>
-              <td>20 garden plots</td>
-              <td>Samantha Wallace at sam_wallace@hotmail.com</td>
-            </tr>
-            <tr>
-              <td>Rock Lake Neighborhood Center</td>
-              <td>440 North Tampa Avenue</td>
-              <td>19 garden plots</td>
-              <td>Samantha Wallace at sam_wallace@hotmail.com.</td>
-            </tr>
-            <tr>
-              <td>Dover Shores</td>
-              <td>1400 Gaston Foster Road</td>
-              <td>14 garden plots</td>
-              <td>dovershorescommunitygarden@gmail.com</td>
-            </tr>
-            <tr>
-              <td>Englewood Neighborhood Center</td>
-              <td>6123 La Costa Drive</td>
-              <td>20 garden plots</td>
-              <td>alexandra.temes@orlando.gov</td>
-            </tr>
-            <tr>
-              <td>Lake Eola Heights</td>
-              <td>406 East Amelia Street</td>
-              <td>36 garden plots</td>
-              <td>lehgc@gmail.com</td>
-            </tr>
-            <tr>
-              <td>Citrus Square – resident only</td>
-              <td>5625 Hickey Drive</td>
-              <td>7 garden plots</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>Mai Kai Condominiums – resident only</td>
-              <td>1935 Conway Road</td>
-              <td>14 garden plots</td>
-              <td></td>
-            </tr>
-          </table>
-        </div>
-      </section>
     </div>
     <div class="get-involved-info" id="sponser">
-      <h1 class="garden-heading2">Want to sponser a garden?</h1>
+      <h1 class="garden-heading2">Sponser a garden</h1>
       <br />
       <p>
         If you are wanting to help support the community garden plots, we accept
@@ -283,8 +140,129 @@
       </div>
     </section>
 
-    <div class="garden-section" id="contact">
-      <h1 class="garden-heading">Contact Us</h1>
+    <div class="garden-section">
+      <h1 class="garden-heading">Orlando, FL Community Garden Locations</h1>
+      <p>
+        If you want to participate in a community garden, please reach out to
+        the specified contact that is listed for the location you want to join.
+      </p>
+      <br /><br />
+      <div style="overflow-x: auto">
+        <table id="community-gardens">
+          <tr>
+            <th>Garden</th>
+            <th>Location</th>
+            <th>Plots</th>
+            <th>Contact</th>
+          </tr>
+          <tr>
+            <td>Colonialtown Community Garden</td>
+            <td>1517 Lake Highland Drive</td>
+            <td>13 garden plots</td>
+            <td>colonialtowncommunitygarden@gmail.com</td>
+          </tr>
+          <tr>
+            <td>Festival Park</td>
+            <td>2911 East Robinson Street</td>
+            <td>30 garden plots</td>
+            <td>festivalparkcommunitygarden@gmail.com</td>
+          </tr>
+          <tr>
+            <td>Englewood Park</td>
+            <td>6123 La Costa Drive</td>
+            <td>22 garden plots</td>
+            <td>
+              Robert Lorento at rglbob@bellsouth.net, or Tom Cooper at
+              mochacoop@bellsouth.net
+            </td>
+          </tr>
+          <tr>
+            <td>Lake Davis/Greenwood Cemetery</td>
+            <td>1226 Elmwood Street</td>
+            <td>16 garden plots</td>
+            <td>
+              Kathryn Hornblette, Garden Committee President, at
+              LDGCommunityGarden@gmail.com.
+            </td>
+          </tr>
+          <tr>
+            <td>Lake Druid Park</td>
+            <td>899 Coy Drive</td>
+            <td>50 garden plots</td>
+            <td>lakedruidgarden@gmail.com</td>
+          </tr>
+          <tr>
+            <td>Laureate Park I – resident only</td>
+            <td>8495 Laureate Boulevard</td>
+            <td>15 garden plots</td>
+            <td>contact the Laureate Park Home Owner’s Association</td>
+          </tr>
+          <tr>
+            <td>Laureate Park II – resident only</td>
+            <td>9661 Tavistock Lakes Boulevard</td>
+            <td>29 garden plots</td>
+            <td>contact the Laureate Park Home Owner’s Association</td>
+          </tr>
+          <tr>
+            <td>Northwest Community Center</td>
+            <td>3955 W D Judge Drive</td>
+            <td>17 garden plots</td>
+            <td>luciana.deshay@orlando.gov</td>
+          </tr>
+          <tr>
+            <td>Parramore</td>
+            <td>654 West Robinson Street</td>
+            <td>19 garden plots</td>
+            <td>Lynn Nicholson at 407.719.7906</td>
+          </tr>
+          <tr>
+            <td>Washington Shores</td>
+            <td>3600 Rogers Drive</td>
+            <td>20 garden plots</td>
+            <td>Samantha Wallace at sam_wallace@hotmail.com</td>
+          </tr>
+          <tr>
+            <td>Rock Lake Neighborhood Center</td>
+            <td>440 North Tampa Avenue</td>
+            <td>19 garden plots</td>
+            <td>Samantha Wallace at sam_wallace@hotmail.com.</td>
+          </tr>
+          <tr>
+            <td>Dover Shores</td>
+            <td>1400 Gaston Foster Road</td>
+            <td>14 garden plots</td>
+            <td>dovershorescommunitygarden@gmail.com</td>
+          </tr>
+          <tr>
+            <td>Englewood Neighborhood Center</td>
+            <td>6123 La Costa Drive</td>
+            <td>20 garden plots</td>
+            <td>alexandra.temes@orlando.gov</td>
+          </tr>
+          <tr>
+            <td>Lake Eola Heights</td>
+            <td>406 East Amelia Street</td>
+            <td>36 garden plots</td>
+            <td>lehgc@gmail.com</td>
+          </tr>
+          <tr>
+            <td>Citrus Square – resident only</td>
+            <td>5625 Hickey Drive</td>
+            <td>7 garden plots</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Mai Kai Condominiums – resident only</td>
+            <td>1935 Conway Road</td>
+            <td>14 garden plots</td>
+            <td></td>
+          </tr>
+        </table>
+      </div>
+    </div>
+
+    <div class="get-involved-info" id="contact">
+      <h1 class="garden-heading2">Contact Us</h1>
       <form>
         <label for="fname">First & Last Name</label>
         <input
