--- a/about.html
+++ b/about.html
@@ -72,8 +72,9 @@
               The introduction of our urban farming program can help reduce
               negative environmental impacts by promoting sustainable
               agriculture as well as increase the sense of interconnection
-              within communities. We strive to provide long-term food security
-              as well as improve economic, social, and environmental problems.
+              within communities. The overall goal of urban farming is to
+              provide long-term food security as well as improve economic,
+              social, and environmental problems.
             </p>
           </div>
         </div>
@@ -82,7 +83,7 @@
     <div class="mission-section-grid">
       <div class="row1 noMargin">
         <div class="mission-section">
-          <h1>Mission Statement</h1>
+          <h1>Our Mission</h1>
           <br />
           <p>
             Growlando is an Orlando, FL based company that strives to make
@@ -120,14 +121,14 @@
           Increase community garden plots in unused land in neighborhoods
         </p>
         <p>
-          A neighborhood community garden benefits the residents living in the
-          neighborhood by producing fresh food right down their street and helps
-          create social bonds with other neighborhood residents.
+          A neighborhood community garden benefits the residents by producing
+          fresh food right down their street and helps create social bonds with
+          other neighborhood residents.
         </p>
         <br />
         <p class="goal-strong">
-          Work with schools of grades K-12 to develop a plan for a community
-          garden on school grounds
+          Work with schools to develop a plan for a community garden on school
+          grounds
         </p>
         <p>
           Kids and teens learning about growing their own food helps teach them
